--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  fl_chart: ^0.64.0
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
+
+  firebase_core: ^2.27.0
+  firebase_auth: ^4.17.0 
+  cloud_firestore: ^4.13.5
+
 
 dev_dependencies:
   flutter_test:
